fix product/search api
