# controller/product.py
@@ -10,7 +10,7 @@ from datetime import datetime
 import base64
 
 
-def show(product_id):
+def read(product_id):
     try:
         # Check if product_id is provided
         if not product_id:
@@ -31,6 +31,8 @@ def show(product_id):
         erp_data = []
         for attribute in attributes_query.all():
             attributes += [{"fieldId": attribute.field_id,
+                            "fieldName": attribute.field.name,
+                            "data_type": attribute.field.data_type,
                             "value": __get_field_value_by_type(attribute)}]
 
             # Get erp data
@@ -140,15 +142,17 @@ def create(data):
         db.session.close()
 
 
-def read():
+def read_multi(data):
     try:
-        # Extract the filter criteria from the request body
-        filters = request.json
-        if not filters or not isinstance(filters, list):
-            return make_response(jsonify({"code": 400, "msg": "Invalid filter criteria"}), 400)
-
         # Ensure the series_id is an integer
-        series_id = int(request.args.get('seriesId', 1))
+        series_id = data.get('seriesId')
+        if not series_id:
+            return make_response(jsonify({"code": 404, "msg": "SeriesId not found"}), 404)
+
+        # Extract the filter criteria from the request body
+        filters = data.get('filters', [])
+        if len(filters) == 0:
+            return __read_without_filter(series_id)
 
         series = Series.query.filter_by(id=series_id, status=1).first()
         if not series:
@@ -224,6 +228,11 @@ def read():
         sql_query += " AND ".join(conditions)
         sql_query += ")"
 
+        # 添加 LIMIT 和 OFFSET 子句
+        sql_query += " LIMIT :limit OFFSET :page"
+        parameters["limit"] = limit
+        parameters["page"] = (page - 1) * limit
+
         # Execute the SQL query
         result = db.session.execute(text(sql_query), parameters).fetchall()
 
@@ -245,7 +254,9 @@ def read():
 
                 fields_data += [
                     {"fieldId": str(field.id),
-                        "value": __get_field_value_by_type(item)}
+                     "fieldName": field.name,
+                     "dataType": field.data_type,
+                     "value": __get_field_value_by_type(item)}
                 ]
 
                 # Get erp data
@@ -408,6 +419,60 @@ def delete(data):
         db.session.close()
 
 
+def __read_without_filter(series_id):
+    # Check if series_id is provided
+    if not series_id:
+        return make_response(jsonify({"code": 400, "msg": "Series ID is required"}), 400)
+
+    # Pagination parameters
+    page = int(request.args.get('page', 1))
+    limit = int(request.args.get('limit', 10))
+
+    # Get the items related to this series_id with pagination
+    items = db.session.query(Item).filter(
+        Item.series_id == series_id).offset((page - 1) * limit).limit(limit).all()
+
+    if not items:
+        return make_response(jsonify({"code": 404, "msg": "Items not found"}), 404)
+
+    result = []
+
+    for item in items:
+        attributes_query = db.session.query(ItemAttribute).filter(
+            ItemAttribute.item_id == item.id)
+
+        attributes = []
+        erp_data = []
+        for attribute in attributes_query.all():
+            attributes.append({
+                "fieldId": attribute.field_id,
+                "fieldName": attribute.field.name,
+                "dataType": attribute.field.data_type,
+                "value": __get_field_value_by_type(attribute)
+            })
+
+            # Get erp data
+            if attribute.field.is_erp:
+                erp_product_no = __get_field_value_by_type(attribute)
+                # 檢查 erp_data 是否為 None，若為 None 則表示發生錯誤
+                if erp_product_no is None:
+                    error_message = "Failed to fetch ERP data."
+                    current_app.logger.error(error_message)
+                    return make_response(jsonify({"code": 500, "msg": error_message}), 500)
+                else:
+                    erp_data += __get_erp_data(erp_product_no)
+
+        result.append({
+            "itemId": item.id,
+            "name": item.name,
+            "seriesId": item.series_id,
+            "attributes": attributes,
+            'erp': erp_data
+        })
+
+    return make_response(jsonify({"code": 200, "msg": "Success", "data": result}), 200)
+
+
 def __save_image(image_data, item_id):
     # Save the picture in the Image table
     image_data = base64.b64decode(image_data)
@@ -421,6 +486,7 @@ def __save_image(image_data, item_id):
 
 
 def __get_erp_data(product_no):
+    erp_data = []
     # Get ERP data
     erp_data = read_erp(product_no)
 
